--- a/src/components/organisms/Header/Header.scss
+++ b/src/components/organisms/Header/Header.scss
@@ -5,4 +5,5 @@
  justify-content: center;
  margin-inline: auto;
  max-width: var(--body-max-width);
+ z-index: 100;
 }
